gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.devops.sh"
    tls:
      mode: Terminate
      certificateRefs:
      - name: devops-sh-cert
    allowedRoutes:
      namespaces:
        from: All
